[package]
name = "anchor-merkle-tree"
version = "1.15.0"
description = "Anchor Merkle Tree: a fork of solana-merkle-tree for anchor compatibility"
authors = ["Anoushk Kharangate <kharangateanoushk04@gmail.com>"]
repository = "https://github.com/anoushk1234/anchor-merkle-tree"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-merkle-tree"
edition = "2021"

[dependencies]
fast-math = "0.1"
solana-program = "1.13.3"

# This can go once the SBF toolchain target Rust 1.42.0+
[target.bpfel-unknown-unknown.dependencies]
matches = "0.1.9"

[dev-dependencies]
hex = "0.4.3"

[lib]
crate-type = ["lib"]
name = "solana_merkle_tree"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
